tests/fail/invalid_syntax_empty.rs
use trait_mux::trait_mux;

trait_mux!();

fn main() {}
