tests/fail/invalid_syntax_empty.stderr
error: unexpected end of input, expected identifier
 --> tests/fail/invalid_syntax_empty.rs:4:5
  |
4 |     trait_mux!();
  |     ^^^^^^^^^^^^
  |
  = note: this error originates in the macro `trait_mux` (in Nightly builds, run with -Z macro-backtrace for more info)
